# google-elastic-hackathon-frenta-backend

./: .env.example  .gitignore  CLAIM_BASED_SEARCH_ANALYSIS.md  FRONTEND_INTEGRATION_GUIDE.md  GOOGLE_MAPS_GROUNDING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  seed_apartments.py  test_apartments.json  test_synthetic_generation.py
app/: config.py  main.py  models.py
app/api/: routes.py
app/indexer/: pipeline.py
app/search/: constants.py  domain_searchers.py  filters.py  pipeline.py  scorers.py  validators.py
app/services/: crud.py  deduplication.py  document_chunker.py  elasticsearch_client.py  embeddings.py  enrichment.py  expansion.py  geocoding.py  grounding.py  llm.py  preview_storage.py  quantifiers.py  synthetic_generator.py  vision.py
output/: batch_generation_report.json
output/generated_apartments/: apartments_index.json  brooklyn_brownstone_manifest.json  generated_brooklyn_heights_brooklyn_890225e1_manifest.json  generated_dumbo_brooklyn_443f2804_manifest.json  generated_east_village_manhattan_77d91f09_manifest.json  generated_east_village_manhattan_81c021e5_manifest.json  (+13 more)
scripts/: apartments_config.json  generate_apartment_images.py  generate_diverse_batch.py  migrate_to_cloud.py  reembed_all_claims.py  reindex_image_metadata.py
tests/: test_api_endpoints.py  test_claim_extraction_granular.py  test_comprehensive_search.py  test_e2e_grounding.py  test_embedding_quality.py  test_grounding_basic.py  test_grounding_quick.py  test_grounding_works.py  test_index.py  test_list_apartments.py  test_multimodal_index.py
(+2 files in other folders)
